crates/decman-lib/src/catalog/proposals/snapshots/decman_lib__catalog__proposals__custody__tests__setup_cc_preapproval.snap
---
source: crates/decman-lib/src/catalog/proposals/custody.rs
expression: "SetupCcPreapproval\n{ provider: cid(\"prov\"), expected_dso: cid(\"dso\"), }.to_daml_proto().unwrap()"
---
Value {
    sum: Some(
        Record(
            Record {
                record_id: None,
                fields: [
                    RecordField {
                        label: "provider",
                        value: Some(
                            Value {
                                sum: Some(
                                    Party(
                                        "prov::1220c4010d6883f367c7f45d55b2449501620130f9b21e96379f17dea455ac7a5892",
                                    ),
                                ),
                            },
                        ),
                    },
                    RecordField {
                        label: "expectedDso",
                        value: Some(
                            Value {
                                sum: Some(
                                    Optional(
                                        Optional {
                                            value: Some(
                                                Value {
                                                    sum: Some(
                                                        Party(
                                                            "dso::1220c4010d6883f367c7f45d55b2449501620130f9b21e96379f17dea455ac7a5892",
                                                        ),
                                                    ),
                                                },
                                            ),
                                        },
                                    ),
                                ),
                            },
                        ),
                    },
                ],
            },
        ),
    ),
}
