crates/decman-lib/src/catalog/proposals/snapshots/decman_lib__catalog__proposals__custody__tests__setup_token_preapproval.snap
---
source: crates/decman-lib/src/catalog/proposals/custody.rs
expression: "SetupTokenPreapproval\n{\n    operator: cid(\"op\"), instrument_admin: cid(\"iadmin\"),\n    instrument_allowances: vec![InstrumentAllowance { id: \"TOK\".into() }],\n}.to_daml_proto().unwrap()"
---
Value {
    sum: Some(
        Record(
            Record {
                record_id: None,
                fields: [
                    RecordField {
                        label: "operator",
                        value: Some(
                            Value {
                                sum: Some(
                                    Party(
                                        "op::1220c4010d6883f367c7f45d55b2449501620130f9b21e96379f17dea455ac7a5892",
                                    ),
                                ),
                            },
                        ),
                    },
                    RecordField {
                        label: "instrumentAdmin",
                        value: Some(
                            Value {
                                sum: Some(
                                    Party(
                                        "iadmin::1220c4010d6883f367c7f45d55b2449501620130f9b21e96379f17dea455ac7a5892",
                                    ),
                                ),
                            },
                        ),
                    },
                    RecordField {
                        label: "instrumentAllowances",
                        value: Some(
                            Value {
                                sum: Some(
                                    List(
                                        List {
                                            elements: [
                                                Value {
                                                    sum: Some(
                                                        Record(
                                                            Record {
                                                                record_id: None,
                                                                fields: [
                                                                    RecordField {
                                                                        label: "id",
                                                                        value: Some(
                                                                            Value {
                                                                                sum: Some(
                                                                                    Text(
                                                                                        "TOK",
                                                                                    ),
                                                                                ),
                                                                            },
                                                                        ),
                                                                    },
                                                                ],
                                                            },
                                                        ),
                                                    ),
                                                },
                                            ],
                                        },
                                    ),
                                ),
                            },
                        ),
                    },
                ],
            },
        ),
    ),
}
